Invalidate border/outline on color change only if they use current color

The new ComputedStyle::HasBorderColorReferencingCurrentColor() is also
useful for fixing crbug.com/713680.

BUG=713680

Review-Url: https://codereview.chromium.org/2836143003
Cr-Commit-Position: refs/heads/master@{#466923}

Former-commit-id: 5ce0f7d183fa6870c877696c6ef1302a945f2e5e